--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "aqa-advanced",
-  "version": "1.0.0",
-  "description": "First project",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "test",
-    "keywords"
-  ],
-  "author": "Ruslan Gaiduchok",
-  "license": "ISC",
-  "dependencies": {
-    "chalk": "^5.3.0"
-  },
-  "type": "module"
+	"name": "aqa-advanced",
+	"version": "1.0.0",
+	"description": "First project",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"test",
+		"keywords"
+	],
+	"author": "Ruslan Gaiduchok",
+	"license": "ISC",
+	"dependencies": {
+		"chalk": "^5.3.0"
+	},
+	"type": "module",
+	"devDependencies": {
+		"@eslint/js": "^9.4.0",
+		"eslint": "^9.4.0",
+		"globals": "^15.4.0",
+		"prettier": "3.3.2"
+	}
 }
