--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "First project",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"prepare": "husky",
+		"lint": "npx eslint --fix ."
 	},
 	"keywords": [
 		"test",
@@ -20,6 +22,7 @@
 		"@eslint/js": "^9.4.0",
 		"eslint": "^9.4.0",
 		"globals": "^15.4.0",
+		"husky": "^9.0.11",
 		"prettier": "3.3.2"
 	}
 }
